--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
        <meta charset="utf-8">
-        <title>André Ferreria</title>
+        <title>HTML5 e CSS3</title>
         <link rel="stylesheet" href="style.css">
     </head>
     
